--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,7 +54,7 @@ dependencies:
   expandable_bottom_sheet: ^1.1.1+1
   flutter_spinbox: ^0.8.0
   expandable: ^5.0.1
-  location:
+  location: 2.8.1
 
 
 dev_dependencies:
