--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,7 +55,8 @@ dependencies:
   flutter_spinbox: ^0.8.0
   expandable: ^5.0.1
   provider: ^6.0.2
-  location: 2.8.1
+  geolocator: ^8.1.1
+  percent_indicator: ^4.0.0
 
 
 dev_dependencies:
